aligned hero center to fix positioning across devices

--- a/_scss/pages/videogame.scss
+++ b/_scss/pages/videogame.scss
@@ -2,6 +2,10 @@
   position: relative;
   //////////////////HERO STYLES
 
+  .hero {
+    align-items: flex-start;
+  }
+
   h1 {
     -webkit-text-fill-color: rgba(0, 0, 0, 0); //overrides color (regardless of order)
   }
@@ -16,6 +20,7 @@
     background-size: cover;
     @media (min-width: $bp-tablet-vert) {
       background: url(/img/videogame/hero-background.png);
+      background-size: cover;
     }
 
     h1 {
